# hdu-labs

./: .gitignore  README.md
computer-networking/: template.tex
computer-networking/exam/: exam.tex
computer-networking/lab1/: lab1.tex
computer-networking/lab1/crc.rs/: Cargo.toml
computer-networking/lab1/crc.rs/src/: binutils.rs  crcchk.rs  parity.rs
computer-networking/lab1/crc.rs/test/: crc.py
computer-networking/lab2/: lab2.ipynb  lab2.tex
computer-networking/lab3/: lab3.tex
data-mining/: Makefile  README.md  analysis.py  gen.sh  requirements.txt
data-mining/audio/: AI1.txt  AI2.txt  AI3.txt  AI4.txt  AI5.txt  AI6.txt  AI7.txt
data-struct/: CMakeLists.txt
data-struct/include/: Array.h  BinNode.h  BinTree.h  CLink.h  CirQueue.h  EdgeNode.h  Graph.h  GraphLnk.h  GraphMat.h  LinerLink.h  Link.h  LinkNode.h  LinkQueue.h  LinkStack.h  SeqStack.h  ShareStack.h  Sqlist.h  StackQueue.h  VertexNode.h
data-struct/src/: exp2-1.cpp  exp2-2-1.cpp  exp2-2-2.cpp  exp2-3-1.cpp  exp3-1-1.cpp  exp3-1-2.cpp  exp3-1-addon.cpp  exp3-2-1.cpp  exp3-3.cpp  exp3-4.cpp  exp7-1.cpp  exp7-2.cpp  exp8-1.cpp  exp8-2.cpp  main.cpp
image-processing/: template.tex
image-processing/lab1/: lab1.py
image-processing/lab2/: lab2.py  lab2.tex
image-processing/lab3/: lab3.ipynb  lab3.py  lab3.tex
image-processing/lab4/: lab4.ipynb  lab4.tex
image-processing/lab5/: lab5.ipynb  lab5.py  lab5.tex
image-processing/lab6/: lab6.ipynb  lab6.tex
image-processing/lab7/: lab7.ipynb  lab7.tex
image-processing/lab8/: iplib.py  lab8.ipynb  lab8.tex
iot/: template.tex
iot/lab3/echo/: echo.ino
iot/lab4/: lab4.tex
iot/lab5/: lab5.tex
iot/lab6/: http.txt  lab3.tex
iot/simulator/: CMakeLists.txt
iot/simulator/include/: def.h  sim.h
iot/simulator/simlib/: led.cpp  main.cpp  pin.cpp  utils.cpp
iot/simulator/src/: energia.cpp
machine-learning/: template.tex
machine-learning/lab1/: lab1.py  lab1.tex
machine-learning/lab2/: lab2.ipynb  lab2.py  lab2.tex
machine-learning/lab3/: lab3.ipynb  lab3.py  lab3.tex  report.csv  report_raw.txt
machine-learning/lab4/: lab4.ipynb  lab4.py  lab4.tex
(+30 files in other folders)
